# NES_game_V1

./: .env.example  .gitignore  ASEPRITE_WORKFLOW.md  AUDIO_GUIDE.md  BUILDER_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING_FCEUX.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE.md  PUPIL_FEEDBACK.md  PUPIL_GUIDE.md  README.md  TEACHER_GUIDE.md  audio-plan.md  builder-plan-phase-b-plus.md  changelog-implemented.md  feedback-plan.md  graphics.s  main.c  nes.cfg.bak  nesgame_pupil.code-workspace  nesgame_teacher.code-workspace  next-steps-plan.md  package-lock.json  package.json  plan-batches.md  playwright.config.js  recenly_observed_bugs.md  sprint10-plan.md  sprint11-plan.md  sprint9-plan.md  test3.chr  test4.chr  walk1.chr
native/: README.md  pyproject.toml
native/nes_core/: Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  pyproject.toml
native/packaging/: install-desktop-entry.sh  io.github.tomd1415.NESStudio.Devel.desktop  io.github.tomd1415.NESStudio.Devel.metainfo.xml
native/scripts/: generate_icons.py
native/tests/: __init__.py  conftest.py
tools/: accounts.py  chr_codec.py  convert_my_tiles.py  generate_chr.py  generate_palette_reference.py  generate_slide_assets.py  playground_server.py  png2chr.py  pyproject.toml  tile_editor.py
tools/audio/: diagnose_song.py
tools/builder-tests/: README.md  _rom-equiv.mjs  a11y.mjs  account-projects.mjs  account-ui.mjs  accounts.mjs  all-modules.mjs  asm-ab.mjs  asm-ai-bench.mjs  asm-ai-corpus.mjs  asm-ai-wide.mjs  asm-ai.mjs  asm-benchmark.mjs  asm-corpus.mjs  asm-enemy.mjs  asm-play.mjs  asm-player.mjs  asm-realproj.mjs  asm-scene.mjs  asm-smb-bench.mjs  asm-vscroll.mjs  attack.mjs  audio.mjs  build-concurrency.mjs  checkpoint.mjs  chunk-a-hp-hud.mjs  chunk-b-anim.mjs  chunk-c-doors.mjs  csrf-origin.mjs  dialogue-font.mjs  dialogue-scroll.mjs  emulator-p2-keys.mjs  enemy-speed.mjs  flush-save.mjs  flyer-patrol.mjs  four-screen.mjs  gallery-auth.mjs  gallery.mjs  hopper-enemy.mjs  hud-nmi-flicker.mjs  (+72 more)
tools/e2e/: .gitignore  (+3 more)
(+776 files in other folders)
