[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nes-studio-native"
version = "0.1.0.dev0"
description = "Native Linux application for NES Studio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PySide6>=6.8,<7",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-qt>=4.4,<5",
]

[project.scripts]
nes-studio = "nes_studio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nes_studio = ["resources/**/*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
