[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nes-studio-build-core"
version = "0.1.0.dev0"
description = "Transport-independent NES Studio project-to-ROM build core"
readme = "nes_studio_core/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nes_studio_core*"]
