[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "nes-core"
version = "0.1.0"
description = "Embedded NES core (tetanes-core) for the NES Studio native app"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
features = ["pyo3/extension-module"]
